<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/societies"
            android:src="@drawable/societies"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSocityName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_society"
                android:textColor="#ff000000"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvMessgae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000065"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>