<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="work.anmol.com.meracampus.ContentActivities.SecondaryActivities.NotesViewActivtiy">

    <TextView
        android:id="@+id/tvTitleNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/tvTitleNotes"
        android:layout_centerHorizontal="true"
        android:text="@string/subject"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff8c8c8c"
        android:textSize="25sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvSubject"
        android:text="@string/notes_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="30dp"/>
</RelativeLayout>
